refactor: .collect(Collectors.toList())를 .toList()로 변경
반환되는 리스트를 수정 불가능한 리스트로 반환하기 위해 toList()로 변경