@@ -4,7 +4,6 @@ import racingcar.domain.Car;
 import racingcar.dto.CarDto;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CarToDtoConverter implements Converter<List<Car>, List<CarDto>> {
 
@@ -12,7 +11,7 @@ public class CarToDtoConverter implements Converter<List<Car>, List<CarDto>> {
     public List<CarDto> convert(List<Car> cars) {
         return cars.stream()
                 .map(this::generateCarDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private CarDto generateCarDto(Car car) {
